--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
     <h1>Sistema Bancário</h1>
     <form>
         Numero: <input id="numero"> <br>
-        Saldo: <input id="saldo">
+        Saldo: <input id="saldo"> <br>
+        Data Aniversário: <input id="data"> <br>
+        <label for="tipoConta">Qual tipo de Conta:</label>
+            <select name="cars" id="cars">
+                <option value="conta">Conta</option>
+                <option value="conta-bonificada">Conta Bonificada</option>
+                <option value="poupança">Poupança</option>
+            </select>
         <button onclick="contaController.inserir(event)">Inserir</button>
+        
     </form>
 
     <script src="js/modelo/conta.js"></script>
     <script src="js/modelo/conta-bonificada.js"></script>
+    <script src="js/modelo/poupança.js"></script>
     <script src="js/modelo/repositorio-contas.js"></script>
     <script src="js/controlador/conta-controller.js"></script>
     <script src="js/script.js"></script>
