Html e Controlador atualizados

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
         Numero: <input id="numero"> <br>
         Saldo: <input id="saldo"> <br>
         Data Aniversário: <input id="data"> <br>
-        <label for="tipoConta">Qual tipo de Conta:</label>
-            <select name="cars" id="cars">
+        Qual tipo de Conta:
+            <select id="tipoConta">
                 <option value="conta">Conta</option>
                 <option value="conta-bonificada">Conta Bonificada</option>
                 <option value="poupança">Poupança</option>
             </select>
+            
         <button onclick="contaController.inserir(event)">Inserir</button>
         
     </form>
